--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -21,4 +21,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Isograms\Isograms.csproj" />
+  </ItemGroup>
+
 </Project>
